@@ -25,50 +25,38 @@ arguments = [
     ParseArgument('starting', help='Name of the station to update.', type=str)
 ]
 switches = [
-    ParseArgument('--editor',
-            help='Generates a text file containing the prices for the station and '
-                    'loads it into the specified editor for you.',
-            default=None,
-            type=str,
-        ),
     ParseArgument('--supply', '-S', 
-            help='Includes demand and stock (supply) values in the update.',
+            help='[Text editing] Includes demand and stock (supply) values in the update.',
             action='store_true',
             default=False,
-        ),
+    ),
     ParseArgument('--timestamps', '-T', 
-            help='Includes timestamps in the update.',
+            help='[Text editing] Includes timestamps in the update.',
             action='store_true',
             default=False,
-        ),
+    ),
     ParseArgument('--all', '-A',
             help='List all known items.',
             action='store_true',
             default=False,
-        ),
+    ),
     ParseArgument('--use-demand', '-D',
             help='Unlock the "Demand" column in the GUI.',
             action='store_true',
             dest='useDemand',
             default=False,
-        ),
+    ),
     ParseArgument('--force-na', '-0', 
             help="Forces 'unk' supply to become 'n/a' by default",
             action='store_true',
             default=False,
             dest='forceNa',
-        ),
-    ParseArgument('--experimental-gui', '-G',
-            help="Use the experimental built-in GUI",
-            action='store_true',
-            default=False,
-            dest='gui',
-        ),
+    ),
     ParseArgument('--height', '-H',
             help="[GUI] Specify height of the window",
             type=int,
             default=800,
-        ),
+    ),
     ParseArgument('--front', '-F',
             help=(
                 "[GUI] Keep the GUI infront of other windows; "
@@ -78,24 +66,39 @@ switches = [
             action='store_true',
             default=False,
             dest='alwaysOnTop',
-        ),
+    ),
     MutuallyExclusiveGroup(
-        ParseArgument('--sublime', 
-                help='Like --editor but uses Sublime Text (2 or 3), which is nice.',
-                action='store_const', const='sublime', dest='editing',
+        ParseArgument('--experimental-gui', '-G',
+                help="Use the experimental built-in GUI",
+                action='store_true',
+                default=False,
+                dest='gui',
+        ),
+        MutuallyExclusiveGroup(
+            ParseArgument('--editor',
+                    help='Generates a text file containing the prices for '
+                            'the station and loads it into the specified '
+                            'text editor for you.',
+                    default=None,
+                    type=str,
             ),
-        ParseArgument('--notepad', 
-                help='Like --editor but uses Notepad.',
-                action='store_const', const='notepad', dest='editing',
+            ParseArgument('--sublime', 
+                    help='Like --editor but uses Sublime Text (2 or 3).',
+                    action='store_const', const='sublime', dest='editing',
             ),
-        ParseArgument('--npp',     
-                help='Like --editor but uses Notepad++.',
-                action='store_const', const='npp', dest='editing',
+            ParseArgument('--notepad', 
+                    help='Like --editor but uses Notepad.',
+                    action='store_const', const='notepad', dest='editing',
             ),
-        ParseArgument('--vim',     
-                help='Like --editor but uses vim.',
-                action='store_const', const='vim', dest='editing',
+            ParseArgument('--npp',     
+                    help='Like --editor but uses Notepad++.',
+                    action='store_const', const='npp', dest='editing',
             ),
+            ParseArgument('--vim',     
+                    help='Like --editor but uses vim.',
+                    action='store_const', const='vim', dest='editing',
+            ),
+        ),
     )
 ]
 
@@ -114,7 +117,7 @@ def getTemporaryPath(cmdenv):
                     "Temporary file already exists: {}\n"
                     "(Check you aren't already editing in another window"
                         .format(tmpPath)
-                    )
+            )
         tmpPath.unlink()
     return tmpPath
 
@@ -131,12 +134,13 @@ def saveCopyOfChanges(cmdenv, dbFilename, stationID):
     dumpPath = pathlib.Path("updated.prices")
     with dumpPath.open("w") as dumpFile:
         # Remember the filename so we know we need to delete it.
-        prices.dumpPrices(dbFilename, prices.Element.full,
+        prices.dumpPrices(dbFilename,
+                prices.Element.full | prices.Element.blanks,
                 file=dumpFile,
                 stationID=stationID,
                 defaultZero=False,
                 debug=cmdenv.debug,
-                )
+        )
     if not cmdenv.quiet:
         print("- Copy of changes saved as '{}'".format(
                 str(dumpPath)
@@ -178,7 +182,7 @@ def getEditorPaths(cmdenv, editorName, envVar, windowsFolders, winExe, nixExe):
             "Either specify the path to your editor with --editor "
             "or set the {} environment variable to point to it."
                 .format(editorName, envVar)
-            )
+    )
 
 
 def editUpdate(tdb, cmdenv, stationID):
@@ -197,24 +201,42 @@ def editUpdate(tdb, cmdenv, stationID):
     editor, editorArgs = cmdenv.editor, []
     if cmdenv.editing == 'sublime':
         cmdenv.DEBUG0("Sublime mode")
-        editor = editor or getEditorPaths(cmdenv, 
-                            "sublime", "SUBLIME_EDITOR",
-                            ["Sublime Text 3", "Sublime Text 2"], "sublime_text.exe", "subl")
+        editor = editor or \
+                getEditorPaths(cmdenv, 
+                        "sublime", "SUBLIME_EDITOR",
+                        ["Sublime Text 3", "Sublime Text 2"],
+                        "sublime_text.exe",
+                        "subl"
+                )
         editorArgs += [ "--wait" ]
     elif cmdenv.editing == 'npp':
         cmdenv.DEBUG0("Notepad++ mode")
-        editor = editor or getEditorPaths(cmdenv,
-                            "notepad++", "NOTEPADPP_EDITOR",
-                            ["Notepad++"], "notepad++.exe", "notepad++")
+        editor = editor or \
+                getEditorPaths(cmdenv,
+                        "notepad++", "NOTEPADPP_EDITOR",
+                        ["Notepad++"],
+                        "notepad++.exe",
+                        "notepad++"
+                )
         if not cmdenv.quiet:
-            print("NOTE: You'll need to exit Notepad++ to return control back to trade.py")
+            print("NOTE: "
+                    "You'll need to exit Notepad++ when you are done.")
     elif cmdenv.editing == "vim":
         cmdenv.DEBUG0("VI iMproved mode")
         if not editor:
             # Hack... Hackity hack, hack, hack.
             # This has a disadvantage in that: we don't check for just "vim" (no .exe) under Windows
-            vimDirs = [ "Git\\share\\vim\\vim{}".format(vimVer) for vimVer in range(70,75) ]
-            editor = getEditorPaths(cmdenv, "vim", "EDITOR", vimDirs, "vim.exe", "vim")
+            vimDirs = [ 
+                    "Git\\share\\vim\\vim{}".format(vimVer)
+                    for vimVer in range(70,75)
+            ]
+            editor = getEditorPaths(cmdenv,
+                    "vim",
+                    "EDITOR",
+                    vimDirs,
+                    "vim.exe",
+                    "vim"
+            )
     elif cmdenv.editing == "notepad":
         cmdenv.DEBUG0("Notepad mode")
         editor = editor or "notepad.exe"  # herp
@@ -235,15 +257,17 @@ def editUpdate(tdb, cmdenv, stationID):
         elementMask = prices.Element.basic
         if cmdenv.supply: elementMask |= prices.Element.supply
         if cmdenv.timestamps: elementMask |= prices.Element.timestamp
+        if cmdenv.all: elementMask |= prices.Element.blanks
         # Open the file and dump data to it.
         with tmpPath.open("w") as tmpFile:
             # Remember the filename so we know we need to delete it.
             absoluteFilename = str(tmpPath.resolve())
             prices.dumpPrices(dbFilename, elementMask,
-                                file=tmpFile,
-                                stationID=stationID,
-                                defaultZero=cmdenv.forceNa,
-                                debug=cmdenv.debug)
+                    file=tmpFile,
+                    stationID=stationID,
+                    defaultZero=cmdenv.forceNa,
+                    debug=cmdenv.debug
+            )
 
         # Stat the file so we can determine if the user writes to it.
         # Use the most recent create/modified timestamp.
@@ -259,13 +283,13 @@ def editUpdate(tdb, cmdenv, stationID):
             raise CommandLineError(
                         "Unable to launch requested editor: {}"
                             .format(editorCommandLine)
-                    )
+            )
         if result != 0:
             raise CommandLineError(
                     "NO DATA IMPORTED: "
                     "Your editor exited with a 'failed' exit code ({})"
                         .format(result)
-                    )
+            )
 
         # Did they update the file? Some editors destroy the file and rewrite it,
         # other files just write back to it, and some OSes do weird things with
@@ -275,7 +299,8 @@ def editUpdate(tdb, cmdenv, stationID):
 
         if postStamp == preStamp:
             import random
-            print("- No changes detected - doing nothing. {}".format(random.choice([
+            print("- No changes detected - doing nothing. {}".format(
+                    random.choice([
                         "Brilliant!",
                         "I'll get my coat.",
                         "I ain't seen you.",
@@ -286,11 +311,11 @@ def editUpdate(tdb, cmdenv, stationID):
                         "Boutros, boutros, ghali!",
                         "I'm Ed Winchester!",
                         "Suit you, sir! Oh!"
-                    ])))
+                    ])
+            ))
         else:
             cache.importDataFromFile(tdb, cmdenv, tmpPath)
-
-        saveCopyOfChanges(cmdenv, dbFilename, stationID)
+            saveCopyOfChanges(cmdenv, dbFilename, stationID)
 
         tmpPath.unlink()
         tmpPath = None
@@ -321,7 +346,7 @@ def guidedUpdate(tdb, cmdenv):
         print("*** ERROR ENCOUNTERED ***")
         print("*** YOUR UPDATES WILL BE SAVED AS {} ***".format(
                 "prices.last"
-                ))
+        ))
         raise
     finally:
         if tmpPath:
@@ -339,20 +364,22 @@ def run(results, cmdenv, tdb):
             raise CommandLineError(
                     "'{}' is a system, not a station.".format(
                         system.name()
-                    ))
+            ))
         cmdenv.startStation = system.stations[0]
     else:
         cmdenv.startStation = place
 
+    if cmdenv.gui:
+        guidedUpdate(tdb, cmdenv)
+        return None
+
     if not cmdenv.editor and not cmdenv.editing:
-        if cmdenv.gui:
-            guidedUpdate(tdb, cmdenv)
-            return None
         raise CommandLineError(
-            "The GUI for updates is currently experimental. "
-            "Either use one of the editors or specify the "
-            "--experimental-gui (--exp or -G for short) "
-            "flags.\n")
+                "The GUI for updates is currently experimental. "
+                "Either use one of the editors or specify the "
+                "--experimental-gui (--exp or -G for short) "
+                "flags.\n"
+        )
 
     # User specified one of the options to use an editor.
     editUpdate(tdb, cmdenv, cmdenv.startStation.ID)
